# SENTINEL-TRACE__Incident_Response_and_Threat_Hunting__Blue-Team

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  demo_sentinel.sh  install.sh
config/: detection_rules.json  sentinel_config.json
service/: tetragon.service
src/: main.cpp
src/include/: AlertManager.hpp  IngestionEngine.hpp  ReasoningEngine.hpp
src/modules/: AlertManager.cpp  IngestionEngine.cpp  ReasoningEngine.cpp
